@@ -6,6 +6,8 @@ of PyAMF.
 
 0.4.0 (unreleased)
 ------------------
+ - Flex messaging now uses correct static attributes for encoding. Determining
+   static/dynamic attributes on objects is now easier (Ticket:357)
  - Added use_proxy option to amf3 which will automagically convert ObjectProxy
    to dict and ArrayCollection to list on decoding and vice versa on encode.
    Thanks to dthompso for the excellent patch (Ticket: 355)
